--- a/test.ipynb
+++ b/test.ipynb
@@ -326,18 +326,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "'<' not supported between instances of 'int' and 'str'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32md:\\Justin\\Python\\VIVE_Python\\test.ipynb Cell 11\u001b[0m line \u001b[0;36m1\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=9'>10</a>\u001b[0m \u001b[39m# Combine the lists and convert numbers to strings\u001b[39;00m\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m combined_list \u001b[39m=\u001b[39m numList3 \u001b[39m+\u001b[39m numbers_as_strings\n\u001b[1;32m---> <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=12'>13</a>\u001b[0m combined_list\u001b[39m.\u001b[39;49msort()\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=13'>14</a>\u001b[0m \u001b[39mprint\u001b[39m(\u001b[39m'\u001b[39m\u001b[39mnumList3 오름차순 정렬 : \u001b[39m\u001b[39m'\u001b[39m, combined_list)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X13sZmlsZQ%3D%3D?line=14'>15</a>\u001b[0m combined_list\u001b[39m.\u001b[39msort(reverse\u001b[39m=\u001b[39m\u001b[39mTrue\u001b[39;00m)\n",
-      "\u001b[1;31mTypeError\u001b[0m: '<' not supported between instances of 'int' and 'str'"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numList3 오름차순 정렬 :  ['1', '2', '3', '4', '5', 'Justin', '고영민', '이영석', '황예훈', '황옛춘']\n",
+      "numList3 내림차순 정렬 :  ['황옛춘', '황예훈', '이영석', '고영민', 'Justin', '5', '4', '3', '2', '1']\n",
+      "\n",
+      "\n"
      ]
     }
    ],
@@ -363,7 +362,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -384,10 +383,502 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numList4의 두 번째 요소 :  4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 요소 위치 찾기\n",
+    "numList4[1]\n",
+    "print('numList4의 두 번째 요소 : ', numList4[1])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[6, 10]\n"
+     ]
+    },
+    {
+     "ename": "ValueError",
+     "evalue": "list.remove(x): x not in list",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mValueError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[1;32md:\\Justin\\Python\\VIVE_Python\\test.ipynb Cell 14\u001b[0m line \u001b[0;36m8\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X16sZmlsZQ%3D%3D?line=4'>5</a>\u001b[0m \u001b[39mdel\u001b[39;00m numList4[\u001b[39m0\u001b[39m]\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X16sZmlsZQ%3D%3D?line=5'>6</a>\u001b[0m \u001b[39mprint\u001b[39m(numList4) \n\u001b[1;32m----> <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X16sZmlsZQ%3D%3D?line=7'>8</a>\u001b[0m numList4\u001b[39m.\u001b[39;49mremove(\u001b[39m7\u001b[39;49m) \u001b[39m# 남은 [2, 7, 4, 6, 7, 10]에서 첫 번째로 등장하는 7을 제거\u001b[39;00m\n\u001b[0;32m      <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X16sZmlsZQ%3D%3D?line=8'>9</a>\u001b[0m \u001b[39mprint\u001b[39m(numList4)\n\u001b[0;32m     <a href='vscode-notebook-cell:/d%3A/Justin/Python/VIVE_Python/test.ipynb#X16sZmlsZQ%3D%3D?line=10'>11</a>\u001b[0m numList4\u001b[39m.\u001b[39mremove(\u001b[39m7\u001b[39m) \u001b[39m# 이후 한 번 더 같은 코드를 반복하면 남은 7도 제거됨\u001b[39;00m\n",
+      "\u001b[1;31mValueError\u001b[0m: list.remove(x): x not in list"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 요소 제거\n",
+    "# del은 함수가 아니라 예약어이므로 'del 리스트[인덱스]'의 형태로 사용한다.\n",
+    "# remove는 리스트에서 첫 번째로 등장하는 요소를 제거한다.\n",
+    "\n",
+    "del numList4[0]\n",
+    "print(numList4) \n",
+    "\n",
+    "numList4.remove(7) # 남은 [2, 7, 4, 6, 7, 10]에서 첫 번째로 등장하는 7을 제거\n",
+    "print(numList4)\n",
+    "\n",
+    "numList4.remove(7) # 이후 한 번 더 같은 코드를 반복하면 남은 7도 제거됨\n",
+    "print(numList4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numList4 순서 뒤집기 =>  [3, 2, 7, 4, 6, 7, 10] \n",
+      "\n",
+      "numList4의 두 번째 요소 :  2\n",
+      "[2, 7, 4, 6, 7, 10]\n",
+      "[2, 4, 6, 7, 10]\n",
+      "[2, 4, 6, 10]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 리스트 순서 뒤집기\n",
+    "numList4 = [10, 7, 6, 4, 7, 2, 3]\n",
+    "numList4.reverse()\n",
+    "print('numList4 순서 뒤집기 => ', numList4, '\\n')\n",
+    "\n",
+    "\n",
+    "# 리스트 요소 위치 찾기\n",
+    "numList4[1]\n",
+    "print('numList4의 두 번째 요소 : ', numList4[1])\n",
+    "\n",
+    "# 리스트 요소 제거\n",
+    "# del은 함수가 아니라 예약어이므로 'del 리스트[인덱스]'의 형태로 사용한다.\n",
+    "# remove는 리스트에서 첫 번째로 등장하는 요소를 제거한다.\n",
+    "\n",
+    "del numList4[0]\n",
+    "print(numList4) \n",
+    "\n",
+    "numList4.remove(7) # 남은 [2, 7, 4, 6, 7, 10]에서 첫 번째로 등장하는 7을 제거\n",
+    "print(numList4)\n",
+    "\n",
+    "numList4.remove(7) # 이후 한 번 더 같은 코드를 반복하면 남은 7도 제거됨\n",
+    "print(numList4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "emptyTuple =  ()\n",
+      "numTuple =  (1, 2, 3)\n",
+      "strTuple =  ('This', 'is', 'a tuple')\n",
+      "<class 'tuple'> \n",
+      "\n",
+      "numTuple의 2번째 요소 :  2 \n",
+      "\n",
+      "1 <class 'int'>\n",
+      "3.14 <class 'float'>\n",
+      "Python <class 'str'>\n",
+      "['Java', 'C'] <class 'list'>\n",
+      "(34, 45, 56) <class 'tuple'>\n",
+      "Java <class 'str'>\n",
+      "45 <class 'int'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 튜플변수명 = (요소1, 요소2, ...)\n",
+    "emptyTuple = ()\n",
+    "numTuple = (1, 2, 3)\n",
+    "strTuple = ('This', 'is', 'a tuple')\n",
+    "print('emptyTuple = ', emptyTuple)\n",
+    "print('numTuple = ', numTuple)\n",
+    "print('strTuple = ', strTuple)\n",
+    "print(type(emptyTuple), '\\n') # 변수 타입 확인하기\n",
+    "\n",
+    "# 튜플 요소 접근하기 - 리스트와 같이 [index]로 접근 가능\n",
+    "print('numTuple의 2번째 요소 : ', numTuple[1], '\\n')\n",
+    "\n",
+    "# 리스트와 마찬가지로 튜플에는 어떠한 자료형도 포함 가능하다.\n",
+    "anyTuple = (1, 3.14, 'Python', ['Java', 'C'], (34, 45, 56))\n",
+    "print(anyTuple[0], type(anyTuple[0]))\n",
+    "print(anyTuple[1], type(anyTuple[1]))\n",
+    "print(anyTuple[2], type(anyTuple[2]))\n",
+    "print(anyTuple[3], type(anyTuple[3]))\n",
+    "print(anyTuple[4], type(anyTuple[4]))\n",
+    "print(anyTuple[3][0], type(anyTuple[3][0]))\n",
+    "print(anyTuple[4][1], type(anyTuple[4][1]))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'name': 'Jinho', 'age': 22, 'gender': 'male'}\n",
+      "Jinho\n",
+      "22\n",
+      "male\n",
+      "<class 'str'>\n",
+      "{1: '1'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리변수명 = {key1:value1, key2:value2, ...}  Dictionary\n",
+    "student_dict = {'name':'Jinho', 'age':22, 'gender':'male'}\n",
+    "print(student_dict)\n",
+    "\n",
+    "# key를 통해 value에 access\n",
+    "print(student_dict['name'])\n",
+    "print(student_dict['age'])\n",
+    "print(student_dict['gender'])\n",
+    "\n",
+    "# 변수 타입 확인하기\n",
+    "print(type(student_dict['gender']))\n",
+    "\n",
+    "# key는 unique한 값이어야 한다. 중복되면 마지막 정보만 남는다.\n",
+    "a = {1:'one', 1:'1'}\n",
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1: 'two'}\n",
+      "dict_keys([1, 2, 3, 4, 5]) <class 'dict_keys'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# key는 unique한 값이어야 한다. 중복되면 마지막 정보만 남는다.\n",
+    "a = {1:'one', 1:'two'}\n",
+    "print(a)\n",
+    "\n",
+    "\n",
+    "num_dict = {1:'one', 2:'two', 3:'three', 4:'' , 5:''}\n",
+    "\n",
+    "# 모든 key값 추출\n",
+    "allkeys = num_dict.keys()\n",
+    "print(allkeys, type(allkeys))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "dict_values(['one', 'two', 'three', '', '']) <class 'dict_values'>\n",
+      "dict_items([(1, 'one'), (2, 'two'), (3, 'three'), (4, ''), (5, '')]) <class 'dict_items'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 모든 value값 추출\n",
+    "allvalues = num_dict.values()\n",
+    "print(allvalues, type(allvalues))\n",
+    "\n",
+    "# key, value 쌍 얻기\n",
+    "kv_pairs = num_dict.items()\n",
+    "print(kv_pairs, type(kv_pairs))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 17,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "two\n",
+      "\n",
+      "\n",
+      "True\n",
+      "False\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# key를 통해 value 얻기\n",
+    "num_dict.get(2) \n",
+    "print(num_dict.get(2))\n",
+    "print('\\n')\n",
+    "\n",
+    "# 해당 key가 딕셔너리 안에 있는지 조사\n",
+    "print(1 in num_dict) # 있으면 True\n",
+    "print(8 in num_dict)# 없으면 False\n",
+    "print('\\n')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 딕셔너리의 key, value 모두 제거\n",
+    "num_dict.clear()\n",
+    "print(num_dict)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{1, 2, 3}\n",
+      "{'H', 'o', 'e', 'l'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집합명 = set(요소들)\n",
+    "\n",
+    "numSet2 = set([1, 2, 3])\n",
+    "strSet1 = set('Hello')\n",
+    "print(numSet1)\n",
+    "print(strSet1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 35,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'0', '1', '2', '3', '4', '5', '6', '7', '8', '9'}"
+      ]
+     },
+     "execution_count": 35,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import string\n",
+    "string.digits\n",
+    "set(string.digits)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'set'>\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 변수 타입 확인하기\n",
+    "print(type(numSet1))\n",
+    "print('\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numSet1과 numSet2의 교집합 :  {3}\n",
+      "numSet1과 numSet2의 합집합 :  {1, 2, 3, 4, 5}\n",
+      "numSet1과 numSet2의 차집합 :  {1, 2}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 집합 연산\n",
+    "numSet2 = set([3, 4, 5])\n",
+    "\n",
+    "print('numSet1과 numSet2의 교집합 : ', numSet1 & numSet2) # 교집합\n",
+    "print('numSet1과 numSet2의 합집합 : ', numSet1 | numSet2) # 합집합\n",
+    "print('numSet1과 numSet2의 차집합 : ', numSet1 - numSet2) # 차집합\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "numSet1과 numSet2의 차집합(difference) :  {1, 2}\n",
+      "{1, 2, 3, 4}\n",
+      "{1, 2, 3, 4, 5, 6, 7}\n",
+      "{1, 2, 3, 4, 6, 7}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# difference를 사용한 차집합\n",
+    "print('numSet1과 numSet2의 차집합(difference) : ', numSet1.difference(numSet2)) \n",
+    "\n",
+    "\n",
+    "# 값 1개 추가\n",
+    "numSet1.add(4)\n",
+    "print(numSet1)\n",
+    "\n",
+    "# 값 여러 개 추가\n",
+    "numSet1.update([5, 6, 7])\n",
+    "print(numSet1)\n",
+    "\n",
+    "# 특정 값 제거\n",
+    "numSet1.remove(5)\n",
+    "print(numSet1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a: 1   b: 2\n",
+      "a > b ?  False\n",
+      "a < b ?  True\n",
+      "a >= b ?  False\n",
+      "a <= b ?  True\n",
+      "a == b ?  False\n",
+      "a != b ?  True\n"
+     ]
+    }
+   ],
+   "source": [
+    "#조건문 비교 연산자 \n",
+    "a = 1\n",
+    "b = 2\n",
+    "\n",
+    "print ('a:', a, ' ', 'b:', b)\n",
+    "\n",
+    "True_or_False = a > b\n",
+    "print('a > b ? ', True_or_False)\n",
+    "\n",
+    "True_or_False = a < b\n",
+    "print('a < b ? ', True_or_False)\n",
+    "\n",
+    "True_or_False = a >= b\n",
+    "print('a >= b ? ', True_or_False)\n",
+    "\n",
+    "True_or_False = a <= b\n",
+    "print('a <= b ? ', True_or_False)\n",
+    "\n",
+    "True_or_False = a == b\n",
+    "print('a == b ? ', True_or_False)\n",
+    "\n",
+    "True_or_False = a != b\n",
+    "print('a != b ? ', True_or_False)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3>2 is True\n",
+      "picknum is smaller than 6\n",
+      "pick ten in numList\n",
+      "You picked the right number\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 기본 if문 사용하기\n",
+    "if 3>2:\n",
+    "    print(\"3>2 is True\")\n",
+    "\n",
+    "# if, else 사용하기\n",
+    "numList=[3, 6, 9, 10, 13, 15]\n",
+    "picknum = numList[0]\n",
+    "if picknum < numList[1]:\n",
+    "    print(\"picknum is smaller than 6\")\n",
+    "else:\n",
+    "    print(\"picknum is larger than 6\")\n",
+    "    \n",
+    "# if, elif, else 사용하기\n",
+    "print(\"pick ten in numList\")\n",
+    "picknum = numList[3]\n",
+    "if picknum < numList[2]:\n",
+    "    print(\"%d is smaller than %d. pick another number.\" % (picknum,numList[2]))\n",
+    "elif picknum > numList[4]:\n",
+    "    print(\"%d is larger than %d. pick another number.\" % (picknum,numList[4]))\n",
+    "elif picknum == 9 or picknum == 13:\n",
+    "    print(\"pick another number.\")\n",
+    "else:\n",
+    "    print(\"You picked the right number\")\n"
+   ]
   }
  ],
  "metadata": {
