--- a/2023_4Q/StudyPython/dec_15.ipynb
+++ b/2023_4Q/StudyPython/dec_15.ipynb
@@ -65,6 +65,72 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "re.compile('[a-z]+')\n",
+      "<re.Match object; span=(2, 8), match='python'>\n"
+     ]
+    }
+   ],
+   "source": [
+    "\n",
+    "import re\n",
+    "p = re.compile('[a-z]+')\n",
+    "m = p.search('5 python')\n",
+    "\n",
+    "print (p)\n",
+    "print (m)\n",
+    "# m.start() + m.end()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import maya.cmds as cmds\n",
+    "\n",
+    "try:\n",
+    "    def toggle_display_type(obj):\n",
+    "        # Check if the override is already created\n",
+    "        override_exists = cmds.attributeQuery('overrideDisplayType', node=obj, exists=True)\n",
+    "\n",
+    "        if not override_exists:\n",
+    "            # Create the override\n",
+    "            cmds.addAttr(obj, longName='overrideDisplayType', attributeType='long', defaultValue=0, hidden=False, keyable=True)\n",
+    "\n",
+    "        # Get the current value of overrideDisplayType\n",
+    "        current_value = cmds.getAttr(obj + '.overrideDisplayType')\n",
+    "        print(current_value)\n",
+    "\n",
+    "        # Toggle between 0 and 2\n",
+    "        new_value = 2 if current_value == 0 else 0\n",
+    "\n",
+    "        # Set the new override value\n",
+    "        cmds.setAttr(obj + '.overrideDisplayType', new_value)\n",
+    "        print(f\"{obj}: overrideDisplayType toggled to {new_value}\")\n",
+    "\n",
+    "    # Assuming you have an object selected or specified\n",
+    "    selected_objects = cmds.ls(selection=True)\n",
+    "\n",
+    "    if selected_objects:\n",
+    "        for obj in selected_objects:\n",
+    "            toggle_display_type(obj)\n",
+    "    else:\n",
+    "        print(\"Please select an object.\")\n",
+    "\n",
+    "except Exception as e:\n",
+    "    print(f\"Error: {e}\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
    "outputs": [
